// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuTable component should match the default table (ideas table) 1`] = `
<Connect(Apollo(Component))
  identifier="foo"
/>
`;

exports[`MenuTable component should match the survey table 1`] = `
<Connect(Apollo(Component))
  identifier="survey"
/>
`;
